# rasi-icechunk

./: .gitignore  .lithops_config  .pre-commit-config.yaml  README.md  lithops_config.json  pyproject.toml
notebooks/: exploration.ipynb
scripts/: icechunk-conversion.py
